[package]
name = "bench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
crossbeam = "0.8.2"
rand = "0.9.4"
rand_distr = "0.5.1"

lfdb = { path = "..", optional = true }
redb = { version = "4.0.0", optional = true }

[dev-dependencies]
tempfile = "3.10.1"


[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "ycsb"
harness = false

[features]
default = ["lfdb"]
lfdb = ["dep:lfdb"]
redb = ["dep:redb"]
